# UDS

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docs_world_class_product_strategy_ru.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: main.py  web_admin.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  appointments.py  feedback.py  health.py
backend/app/api/v1/admin/: __init__.py  analytics.py  appointments.py  campaigns.py  certificates.py  clients.py  communications.py  dashboard.py  employees.py  feedback.py  messages.py  news.py  (+6 more)
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py  script.py.mako
backend/app/models/: __init__.py  app_page_event.py  audit_log.py  campaign.py  certificate.py  client.py  client_activity.py  client_analytics.py  client_profile.py  communication.py  control_tower.py  employee.py  feedback.py  message.py  news.py  operation.py  product.py  referral_program.py  salon.py  system_settings.py  traffic_channel.py  user.py
backend/app/schemas/: analytics.py  app_feedback.py  appointments.py  auth.py  campaigns.py  certificates.py  clients.py  common.py  communications.py  dashboard.py  employees.py  feedback.py  messages.py  news.py  operations.py  products.py  referral_programs.py  security.py  system_settings.py  traffic.py
backend/app/services/: appointments_service.py  auth_service.py  clients_service.py  communications_service.py  employees_service.py  messages_service.py  security_service.py
(+3 files in other folders)
